{
    "name": "PlayerMouseInputAction",
    "maps": [
        {
            "name": "Mouse",
            "id": "d9cf7167-d65d-4f37-83ad-8105796c2512",
            "actions": [
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "ece7623b-8764-4cd0-85ea-57abdafd27bc",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LeftMouseFire",
                    "type": "Button",
                    "id": "72d6813c-f8b2-48e4-8425-e69dc7179b4c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RightMouseFire",
                    "type": "Button",
                    "id": "75ace1be-c76e-4352-9b51-93eddd8e8e57",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "EndlessShooting",
                    "type": "Button",
                    "id": "1aaefec3-22ef-40cb-8479-7459c2cd6ca2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e4cc67e8-1604-47af-af17-ca704067a649",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "aeb1ad9f-e523-437d-bdd0-03c3a618035c",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftMouseFire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c849129f-2f67-40d3-89e0-0a0454598823",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightMouseFire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e56c41e0-868d-4e4e-b620-0400488afe1b",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EndlessShooting",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}